--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionsContent.cshtml
@@ -51,12 +51,12 @@
                     <table class="table table-striped mb-5">
                         <thead>
                         <tr>
-                            <th width="16px"></th>
+                            <th class="tcol-narrow"></th>
                             <th>Name</th>
                             <th>Amount</th>
                             <th>Months</th>
                             <th>Enabled</th>
-                            <th></th>
+                            <th class="tcol-narrow"></th>
                         </tr>
                         </thead>
                         <tbody>
