--- a/ODK.Web.Razor/wwwroot/css/_tables.scss
+++ b/ODK.Web.Razor/wwwroot/css/_tables.scss
@@ -31,3 +31,7 @@ th.sortable {
     border-top: 1px solid var(--bs-table-border-color);
     border-bottom: 2px solid var(--bs-table-border-color);
 }
+
+.tcol-narrow {
+    width: 1px;
+}
