--- a/ODK.Web.Razor/wwwroot/css/build.scss
+++ b/ODK.Web.Razor/wwwroot/css/build.scss
@@ -27,6 +27,7 @@
 @import "_google";
 @import "_header";
 @import "_icons";
+@import "_links";
 @import "_lists";
 @import "_modal";
 @import "_navbar";
