--- a/ODK.Web.Razor/wwwroot/css/main.css
+++ b/ODK.Web.Razor/wwwroot/css/main.css
@@ -11970,10 +11970,6 @@ p:last-child {
   color: var(--bs-body-color);
 }
 
-.link-hover:hover {
-  opacity: 0.8;
-}
-
 /*mimic BS4-style card header*/
 .accordion-button {
   background-color: rgba(0, 0, 0, 0.03);
@@ -12191,6 +12187,15 @@ html[data-platform=odk] {
   background-color: var(--bs-dropdown-link-hover-bg);
 }
 
+.dropdown-item--header {
+  --bs-dropdown-header-padding-x: var(--bs-dropdown-item-padding-x);
+  --bs-dropdown-header-padding-y: var(--bs-dropdown-item-padding-y);
+  display: flex;
+  justify-content: end;
+  font-weight: 700;
+  font-size: 1rem;
+}
+
 .dropdown-item--icon {
   display: flex;
   justify-content: space-between;
@@ -12369,6 +12374,15 @@ html[data-platform=odk] {
 
 .icon--excel {
   color: #107C41;
+}
+
+.link-hover:hover.link-hover--opacity,
+.link-hover:hover .link-hover__opacity {
+  opacity: 0.8;
+}
+.link-hover:hover.link-hover--underline,
+.link-hover:hover .link-hover__underline {
+  text-decoration: underline;
 }
 
 .list-item {
