--- a/ODK.Web.Razor/Views/Shared/Components/_Card.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Card.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ODK.Web.Razor.Models.Components
 @model CardViewModel
 
-<div class="card">
+<div class="card" data-odk-component="_Card">
     @if (Model.HeaderContentFunc != null)
     {
         <div class="card-header">
