--- a/ODK.Web.Razor/Views/Shared/Components/_Panel.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Panel.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ODK.Web.Razor.Models.Components
 @model PanelViewModel
 
-<section class="panel">
+<section class="panel" data-odk-component="_Panel">
     <div class="panel-header">
         <div class="panel-title">
             @Model.TitleContentFunc.Invoke(null)
