--- a/ODK.Web.Razor/Views/Shared/Groups/_MemberGroupsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_MemberGroupsContent.cshtml
@@ -6,9 +6,18 @@
 <div data-odk-component="_MemberGroupsContent">
     <section class="section--admin">
         @await Html.PartialAsync("Components/_Panel", new PanelViewModel
-       {
-           TitleContentFunc = @<h5>Owner</h5>,
-           BodyContentFunc =
+        {
+            TitleContentFunc = @<h5><span>Owner</span></h5>,
+            TitleEndContentFunc = 
+                @<div>
+                    @if (Model.Owned.Count > 0)
+                    {
+                        <a href="@OdkRoutes.MemberGroups.GroupCreate(Model.Platform)">
+                           Create group
+                        </a>
+                    }
+                </div>,
+            BodyContentFunc =
                 @<div>
                     @if (Model.Owned.Count > 0)
                     {
@@ -21,7 +30,7 @@
                             <a href="@OdkRoutes.MemberGroups.GroupCreate(Model.Platform)">Create a group</a>
                         </p>
                     }
-                </div>
+                </div>           
        })
     </section>
 
