--- a/ODK.Web.Razor/Pages/SuperAdmin/Subscriptions/Create.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Subscriptions/Create.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Authorization
 @using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.Components
-@model SubscriptionCreateModel
+@model CreateModel
 @{
     Layout = "_SiteAdminLayout";
     Model.Title = "Create subscription | SuperAdmin";
