--- a/ODK.Web.Razor/Pages/SuperAdmin/Subscriptions/Index.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Subscriptions/Index.cshtml
@@ -2,7 +2,7 @@
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
 @using ODK.Web.Razor.Models.Components
-@model SubscriptionsModel
+@model IndexModel
 @{
     Layout = "_SiteAdminLayout";
     Model.Title = "Subscriptions | SuperAdmin";
