--- a/ODK.Web.Razor/Pages/SuperAdmin/Subscriptions/Subscription.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Subscriptions/Subscription.cshtml
@@ -4,7 +4,7 @@
 @using ODK.Services.Subscriptions
 @using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.Components
-@model ODK.Web.Razor.Pages.SuperAdmin.SubscriptionModel
+@model ODK.Web.Razor.Pages.SuperAdmin.Subscriptions.SubscriptionModel
 @inject ISiteSubscriptionAdminService SiteSubscriptionAdminService
 @{
     Layout = "_SiteAdminLayout";
